--- a/index.html
+++ b/index.html
@@ -90,20 +90,42 @@
                     <i class='bx bx-camera'></i>
                     <h3>Photographar</h3>
                 </div>
+
+                <div class="circle"></div>
             </div>
-        </div>
-
-
-
-        <div class="oveerlay">
+            <div class="overlay"></div>
 
         </div>
+
+
+
+            <div class="home-img">
+                <img src="" alt="">
+            </div>
+        
 
     </section>
 
     <!-- About part -->
     <section class="about" id="about">
+        <div class="about-img">
+            <img src="" alt="">
+        </div>
 
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima amet sed aliquid, quasi praesentium necessitatibus.</h3>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, rerum!</p>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, soluta dolorem quod accusantium eos ab perferendis rerum tempora tempore harum?
+
+                Read More..
+            </p>
+
+            <a href="" class="btn">Read More</a>
+            
+        </div>
 
     </section>
 
