--- a/index.html
+++ b/index.html
@@ -131,7 +131,30 @@
 
     <!-- Services part -->
     <section class="services" id="services">
+        <h2 class="heading">My <span>Services</span></h2>
 
+        <div class="services-container">
+            <div class="services-box">
+                <i class="bx bx-code-alt"></i>
+                <h3>Web Devlopment</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quia numquam doloremque cum deleniti repudiandae!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class="bx bxs-paint"></i>
+                <h3>Graphic Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quia numquam doloremque cum deleniti repudiandae!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class="bx bx-bar-chart-alt"></i>
+                <h3>Degital Marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam quia numquam doloremque cum deleniti repudiandae!</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
 
     </section>
 
