--- a/index.html
+++ b/index.html
@@ -161,7 +161,84 @@
 
     <!-- Portfoliio part -->
     <section class="Portfolio" id="Portfolio">
+        <h2 class="heading">Latest <span>Project</span></h2>
 
+        <div class="portfolio-container">
+            <!-- project 1 -->
+            <div class="portfolio-box">
+                <img src="" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Desing</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem repellat </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <!-- Project 2 -->
+
+            <div class="portfolio-box">
+                <img src="" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Desing</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem repellat </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <!-- Project 3 -->
+
+            <div class="portfolio-box">
+                <img src="" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Desing</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem repellat </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <!-- Project 4 -->
+            <div class="portfolio-box">
+                <img src="" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Desing</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem repellat </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <!-- Project 5 -->
+
+            <div class="portfolio-box">
+                <img src="" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Desing</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem repellat </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+
+            <!-- project 6 -->
+            <div class="portfolio-box">
+                <img src="" alt="">
+
+                <div class="portfolio-layer">
+                    <h4>Web Desing</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem repellat </p>
+
+                    <a href="#"><i class="bx bx-link-external"></i></a>
+                </div>
+            </div>
+        </div>
     </section>
 
 
