--- a/index.html
+++ b/index.html
@@ -244,7 +244,45 @@
 
     <!-- Tastimonial part -->
     <div class="tastimonial-container">
+        <h2>Valuable <span>Testimonial</span></h2>
 
+        <div class="testimonial-wrapper">
+            <div class="testimonial-box mySwiper">
+                <div class="testimonial-content swiper-wrapper">
+                    <!-- first testimonial -->
+                    <div class="testimonial-slide swipper-slide">
+                        <img src="" alt="">
+                        <h1>Santosh Kumar</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad veritatis nam nulla ipsa corrupti quas quibusdam, reiciendis magni officia velit?</p>
+                    </div>
+
+                    <!-- second testimonial -->
+                    <div class="testimonial-slide swipper-slide">
+                        <img src="" alt="">
+                        <h1>Santosh Kumar</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad veritatis nam nulla ipsa corrupti quas quibusdam, reiciendis magni officia velit?</p>
+                    </div>
+
+                    <!-- Third testimonial -->
+                    <div class="testimonial-slide swipper-slide">
+                        <img src="" alt="">
+                        <h1>Santosh Kumar</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad veritatis nam nulla ipsa corrupti quas quibusdam, reiciendis magni officia velit?</p>
+                    </div>
+
+                    <!-- Next Button -->
+                    <div class="swiper-button-next"></div>
+
+                    <!-- Prev Button -->
+                    <div class="swiper-button-prev"></div>
+
+                    <!-- Pegination Button -->
+                    <div class="swiper-pegination">
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
     <!-- Contact -->
