--- a/index.html
+++ b/index.html
@@ -287,7 +287,27 @@
 
     <!-- Contact -->
     <section class="contact" id="contact">
+        <h2 class="heading">Contact <span>Me!</span></h2>
 
+        <form action="">
+            <div class="input-box">
+                <input type="text" placeholder="Full name">
+
+                <input type="email" placeholder="Email Address">
+            </div>
+            
+            <div class="input-box">
+                <input type="number" placeholder="Mobile Number">
+
+                <input type="text" placeholder="Email Subject">
+            </div>
+
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+
+            <input type="submit" value="Send Massages" class="btn">
+
+            
+        </form>
 
     </section>
 
