--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link css -->
     <link rel="stylesheet" href="./style.css">
+    <!-- Link tag or icon -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
     <!-- Tital part -->
     <title>Portfolio website</title>
@@ -315,6 +317,13 @@
     <!-- Footer part -->
     <footer class="footter">
 
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 | All Rights Reserved</p>
+        </div>
+
+        <div class="footer-iconTop">
+            <a href=""><i class="bx bx-up-arrow-alt"></i></a>
+        </div>
     </footer>
 
 
