--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="./style.css">
     <!-- Link tag or icon -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- Swiper CDN -->
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
     
     <!-- Tital part -->
     <title>Portfolio website</title>
@@ -30,7 +35,7 @@
 
         <div class="bx bx-moon" id="darkmode-icon"></div>
 
-        <div class="dx bx-menu" id="menu-icon"></div>
+        <div class="bx bx-menu" id="menu-icon"></div>
 
     </header>
     <!-- Home part -->
@@ -330,9 +335,11 @@
 
 
 
+    <!-- script for swiper -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-
-
+    <!-- Scroll reveal -->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <!-- Link icon Libraries-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/dist/boxicons.js" integrity="sha512-Dm5UxqUSgNd93XG7eseoOrScyM1BVs65GrwmavP0D0DujOA8mjiBfyj71wmI2VQZKnnZQsSWWsxDKNiQIqk8sQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
