--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 
             <div class="home-img">
-                <img src="" alt="">
+                <img src="https://images.pexels.com/photos/17771509/pexels-photo-17771509/free-photo-of-santosh7321.png?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
             </div>
         
 
