--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <!-- About part -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="" alt="">
+            <img src="https://images.pexels.com/photos/17771457/pexels-photo-17771457/free-photo-of-santosh7321.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
         </div>
 
         <div class="about-content">
@@ -173,7 +173,7 @@
         <div class="portfolio-container">
             <!-- project 1 -->
             <div class="portfolio-box">
-                <img src="" alt="">
+                <img src="https://th.bing.com/th/id/OIP.2-VhqUVJaX393J9DrRRGpwHaHa?w=176&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Web Desing</h4>
@@ -186,7 +186,7 @@
             <!-- Project 2 -->
 
             <div class="portfolio-box">
-                <img src="" alt="">
+                <img src="https://th.bing.com/th/id/OIP.2-VhqUVJaX393J9DrRRGpwHaHa?w=176&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Web Desing</h4>
@@ -199,7 +199,7 @@
             <!-- Project 3 -->
 
             <div class="portfolio-box">
-                <img src="" alt="">
+                <img src="https://th.bing.com/th/id/OIP.2-VhqUVJaX393J9DrRRGpwHaHa?w=176&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Web Desing</h4>
@@ -211,7 +211,7 @@
 
             <!-- Project 4 -->
             <div class="portfolio-box">
-                <img src="" alt="">
+                <img src="https://th.bing.com/th/id/OIP.2-VhqUVJaX393J9DrRRGpwHaHa?w=176&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Web Desing</h4>
@@ -224,7 +224,7 @@
             <!-- Project 5 -->
 
             <div class="portfolio-box">
-                <img src="" alt="">
+                <img src="https://th.bing.com/th/id/OIP.2-VhqUVJaX393J9DrRRGpwHaHa?w=176&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Web Desing</h4>
@@ -236,7 +236,7 @@
 
             <!-- project 6 -->
             <div class="portfolio-box">
-                <img src="" alt="">
+                <img src="https://th.bing.com/th/id/OIP.2-VhqUVJaX393J9DrRRGpwHaHa?w=176&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
 
                 <div class="portfolio-layer">
                     <h4>Web Desing</h4>
