--- a/index.html
+++ b/index.html
@@ -258,21 +258,21 @@
                 <div class="testimonial-content swiper-wrapper">
                     <!-- first testimonial -->
                     <div class="testimonial-slide swipper-slide">
-                        <img src="" alt="">
+                        <img src="https://images.pexels.com/photos/17771509/pexels-photo-17771509/free-photo-of-santosh7321.png?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
                         <h1>Santosh Kumar</h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad veritatis nam nulla ipsa corrupti quas quibusdam, reiciendis magni officia velit?</p>
                     </div>
 
                     <!-- second testimonial -->
                     <div class="testimonial-slide swipper-slide">
-                        <img src="" alt="">
+                        <img src="https://images.pexels.com/photos/17771509/pexels-photo-17771509/free-photo-of-santosh7321.png?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
                         <h1>Santosh Kumar</h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad veritatis nam nulla ipsa corrupti quas quibusdam, reiciendis magni officia velit?</p>
                     </div>
 
                     <!-- Third testimonial -->
                     <div class="testimonial-slide swipper-slide">
-                        <img src="" alt="">
+                        <img src="https://images.pexels.com/photos/17771509/pexels-photo-17771509/free-photo-of-santosh7321.png?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
                         <h1>Santosh Kumar</h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad veritatis nam nulla ipsa corrupti quas quibusdam, reiciendis magni officia velit?</p>
                     </div>
@@ -284,7 +284,7 @@
                     <div class="swiper-button-prev"></div>
 
                     <!-- Pegination Button -->
-                    <div class="swiper-pegination">
+                    <div class="swiper-pegination-bullet">
                     </div>
                 </div>
 
