--- a/index.html
+++ b/index.html
@@ -336,6 +336,7 @@
 
 
     <!-- script for swiper -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <!-- Scroll reveal -->
