--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 
             </div>
 
-            <a href="#" class="btn">Download CV</a>
+            <a href="./Resume (4).pdf" download="./Resume (4).pdf" class="btn">Download CV</a>
 
         </div>
         <!-- profession container -->
@@ -137,7 +137,7 @@
     </section>
 
     <!-- Services part -->
-    <section class="services" id="services">
+    <section class="services" id="servises">
         <h2 class="heading">My <span>Services</span></h2>
 
         <div class="services-container">
@@ -167,7 +167,7 @@
 
 
     <!-- Portfoliio part -->
-    <section class="Portfolio" id="Portfolio">
+    <section class="Portfolio" id="portfoliio">
         <h2 class="heading">Latest <span>Project</span></h2>
 
         <div class="portfolio-container">
@@ -250,7 +250,7 @@
 
 
     <!-- Tastimonial part -->
-    <div class="tastimonial-container">
+    <div class="testimonial-container">
         <h2>Valuable <span>Testimonial</span></h2>
 
         <div class="testimonial-wrapper">
