--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
             <!-- Social media -->
             <div class="social-media">
 
-                <a href="#">
+                <a href="https://www.linkedin.com/in/santosh-kumar-a371a4235/" target="_blank">
                     <i class='bx bxl-linkedin'></i>
                 </a>
 
-                <a href="#">
+                <a href="https://github.com/santosH7321" target="_blank">
                     <i class='bx bxl-github'></i>
                 </a>
 
-                <a href="#">
+                <a href="https://www.facebook.com/santosh.xyadav.5" target="_blank">
                     <i class='bx bxl-facebook'></i>
                 </a>
 
-                <a href="#">
+                <a href="https://twitter.com/santosH_sky01" target="_blank">
                     <i class='bx bxl-twitter'></i>
                 </a>
                 
@@ -94,8 +94,8 @@
 
                 <!-- photographer -->
                 <div class="profession" style="--i:3">
-                    <i class='bx bx-camera'></i>
-                    <h3>Photographar</h3>
+                    <i class='bx bx-code'></i>
+                    <h3>ML Devloper</h3>
                 </div>
 
                 <div class="circle"></div>
@@ -116,7 +116,9 @@
     <!-- About part -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="https://images.pexels.com/photos/17771457/pexels-photo-17771457/free-photo-of-santosh7321.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+            <img src="https://images.pexels.com/photos/17771509/pexels-photo-17771509/free-photo-of-santosh7321.png?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+
+            
         </div>
 
         <div class="about-content">
