--- a/Project2/index.html
+++ b/Project2/index.html
@@ -10,7 +10,7 @@
     <div id="main">
         <div id="page1">
             <div id="cursor">
-                
+                <h5>Play Reel</h5>
             </div>
             <video autoplay muted loop src="./assests/bg-v.mp4"></video>
 
@@ -25,8 +25,18 @@
                 </h1>
             </div>
         </div>
+
+        <div id="page2"></div>
     </div>
 
-    <script src="script.js"></script>
+
+
+
+    <!-- GSAP CDN-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Scroll trigger -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- JS linking -->
+    <script src="./script.js"></script>
 </body>
 </html>
