--- a/Project2/index.html
+++ b/Project2/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link css -->
     <link rel="stylesheet" href="./style.css">
+    <!-- Link favicon -->
     <link rel="shortcut icon" href="https://www.rejouice.com/assets/favicon/favicon-32x32.png" type="image/x-icon">
+    <!-- Locomotive css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
+
+    <!-- Title -->
     <title>Home | REJOUICE®</title>
 </head>
 <body>
@@ -27,12 +33,31 @@
             </div>
         </div>
 
-        <div id="page2"></div>
+        <div id="page2">
+            <div id="page2-content">
+                <p>Full-service agency.
+                    <br>
+                    Two engagement models.
+                </p>
+
+                <p>
+                    Pairs & San Diego
+                </p>
+
+            </div>
+            <hr>
+            <div id="page2-main-content">
+                <p>
+                     We are a digital brand accelerator. We design, develop, and scale market-defining brands by unlocking their hidden potential. Choose full cash compensation or offset up to 50% of our fees for equity in your company. Your vision, your decision.
+                </p>
+            </div>
+        </div>
     </div>
 
 
 
-
+    <!-- Locomotive Link it is for smooth scrolling -->
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <!-- GSAP CDN-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Scroll trigger -->
