--- a/Project3/index.html
+++ b/Project3/index.html
@@ -4,25 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Animated | Web</title>
 </head>
 <body>
     <div id="wrraper">
+
+       <div class="navigation-head">
+        <div class="nav-head">
+            <h2>Logo</h2>
+        </div>
+        <div >
+            <nav class="nav-mid-head">
+                <ul class="nav-child">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Contact</li>
+                    <li>Project</li>
+                </ul>
+            </nav>
+        </div>
+        <div class="nav-last">
+            <p class="nav-login">Login</p>
+        </div>
+       </div>
+       <hr>
         <div class="head">
             <div class="left-section">
-                <img src="https://images.pexels.com/photos/16741600/pexels-photo-16741600/free-photo-of-an-asphalt-road-between-snowcapped-mountains.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+                <img class="img1" src="https://images.pexels.com/photos/16741600/pexels-photo-16741600/free-photo-of-an-asphalt-road-between-snowcapped-mountains.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
 
-                <img src="https://images.pexels.com/photos/10498570/pexels-photo-10498570.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+                <img class="img2" src="https://images.pexels.com/photos/10498570/pexels-photo-10498570.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
             </div>
             <div class="mid-section">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci iusto nisi dolorem nam recusandae earum laboriosam voluptate tempora porro delectus consequuntur voluptas quaerat officia autem, laborum odio ipsam expedita deleniti.</p>
 
-                <button>Viwe More</button>
-            </div>
-            <div class="right-section">
-                <img src="https://images.pexels.com/photos/19536430/pexels-photo-19536430/free-photo-of-christmas-tree-with-red-baubles.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+                <button>View More</button>
 
-                <img src="https://images.pexels.com/photos/19408371/pexels-photo-19408371/free-photo-of-snowy-rocky-mountain-in-landscape.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+                <a href="#"><i class="fa-solid fa-circle-arrow-down"></i></a>
+            </div>
+            <div  class="right-section">
+                <img class="img3" src="https://images.pexels.com/photos/19536430/pexels-photo-19536430/free-photo-of-christmas-tree-with-red-baubles.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
+
+                <img class="img4" src="https://images.pexels.com/photos/19408371/pexels-photo-19408371/free-photo-of-snowy-rocky-mountain-in-landscape.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
             </div>
             
         </div>
