--- a/Project3/index.html
+++ b/Project3/index.html
@@ -40,7 +40,7 @@
 
                 <button>View More</button>
 
-                <a href="#"><i class="fa-solid fa-circle-arrow-down"></i></a>
+                <a class="aero" href="#"><i class="fa-solid fa-circle-arrow-down"></i></a>
             </div>
             <div  class="right-section">
                 <img class="img3" src="https://images.pexels.com/photos/19536430/pexels-photo-19536430/free-photo-of-christmas-tree-with-red-baubles.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load" alt="">
@@ -51,6 +51,11 @@
         </div>
     </div>
 
+
+    <!-- GSAP CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/gsap.min.js" integrity="sha512-EZI2cBcGPnmR89wTgVnN3602Yyi7muWo8y1B3a8WmIv1J9tYG+udH4LvmYjLiGp37yHB7FfaPBo8ly178m9g4Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- Linking js -->
     <script src="./script.js"></script>
 </body>
 </html>
