--- a/Project2/index.html
+++ b/Project2/index.html
@@ -52,6 +52,52 @@
                 </p>
             </div>
         </div>
+
+        <div id="page3">
+            <div id="page3-top">
+             <h4>Agenct & Venture <span>Models</span> ↵</h4>  
+             <h2>Elplore Our Service</h2>
+             <h2>& engagement models</h2> 
+            </div>
+            <div id="page3-elements">
+                <div class="box">
+                    <img src="https://images.prismic.io/rejouice/d8e1fa1f-4f24-41e1-a249-098c62df5aff_Group+46+%281%29.jpg?auto=compress,format" alt="">
+                    <video autoplay loop muted src="./assests//wh.mp4"></video>
+                </div>
+                <div class="box">
+                    <img src="https://images.prismic.io/rejouice/e0350a3d-c390-4d97-af1a-5c86bc822b52_Group+3929.jpg?auto=compress,format" alt="">
+                    <video autoplay loop muted src="./assests//wh2.mp4"></video>
+                </div>
+                <div class="box">
+                    <img src="https://images.prismic.io/rejouice/2874f084-ec6c-4a19-b025-a55c1e6db929_Group+3692.jpg?auto=compress,format" alt="">
+                    <video autoplay loop muted src="./assests//wh3.mp4"></video>
+                </div>
+            </div>
+        </div>
+
+        <!-- Page 2 is repeat -->
+        <div id="page2">
+            <div id="page2-content">
+                <p>Full-service agency.
+                    <br>
+                    Two engagement models.
+                </p>
+
+                <p>
+                    Pairs & San Diego
+                </p>
+
+            </div>
+            <hr>
+            <div id="page2-main-content">
+                <p>
+                     We are a digital brand accelerator. We design, develop, and scale market-defining brands by unlocking their hidden potential. Choose full cash compensation or offset up to 50% of our fees for equity in your company. Your vision, your decision.
+                </p>
+            </div>
+        </div>
+
+
+
     </div>
 
 
