--- a/Project2/index.html
+++ b/Project2/index.html
@@ -96,6 +96,10 @@
             </div>
         </div>
 
+        <div id="page4">
+            <video autoplay loop muted src="./assests//bgVideo.webm"></video>
+        </div>
+
 
 
     </div>
