--- a/Project2/index.html
+++ b/Project2/index.html
@@ -98,9 +98,22 @@
 
         <div id="page4">
             <video autoplay loop muted src="./assests//bgVideo.webm"></video>
+            <svg class="abs tl:0 fit transform rotate:-90deg" viewBox="0 0 100 100">
+                <circle cx="50" cy="50" r="49" stroke="#fff" stroke-width="0.25" fill="none" class="o:0.3 dasharray:302 dashoffset:604 (.in-view):dashoffset:400 (.in-view):tween:all,2.8s,easeOutSlow "></circle>
+                <circle cx="50" cy="50" r="49" stroke="#fff" stroke-width="0.25" fill="none" class="dasharray:302 dashoffset:302 (.in-view):dashoffset:100 (.in-view):tween:all,2.8s,easeOutSlow "></circle>
+               
+            </svg>
+            <svg class="abs tl:0 fit transform rotate:0 (.in-view):rotate:237deg (.in-view):tween:all,2.8s,easeOutSlow " viewBox="0 0 100 100">
+                <circle cx="50" cy="1" r="1" fill="#fff"></circle>
+            </svg>
+            
         </div>
 
-
+        <div id="page5">
+            <div id="page5-top">
+                <h1>Get in touch.</h1>
+            </div>
+        </div>
 
     </div>
 
