--- a/Project2/index.html
+++ b/Project2/index.html
@@ -26,7 +26,11 @@
     <title>Home | REJOUICE®</title>
   </head>
   <body>
-    <div id="loader"></div>
+    <div id="loader">
+        <h3>Tommorrow's</h3>
+        <h3>Brand</h3>
+        <h3>Today</h3>
+    </div>
     <div id="main">
       <div id="page1">
         <div id="cursor">
