--- a/Project2/index.html
+++ b/Project2/index.html
@@ -29,7 +29,7 @@
     <div id="loader">
         <h3>Tommorrow's</h3>
         <h3>Brand</h3>
-        <h3>Today</h3>
+        <h3>Today™</h3>
     </div>
     <div id="main">
       <div id="page1">
@@ -153,6 +153,9 @@
         >
           <circle cx="50" cy="1" r="1" fill="#fff"></circle>
         </svg>
+        <div id="cursor2">
+          <h5>Take it!</h5>
+        </div>
       </div>
 
       <div id="page5">
