--- a/Sundown/index.html
+++ b/Sundown/index.html
@@ -18,6 +18,17 @@
                 <h4><a href="#">Contact</a></h4>
             </div>
            </nav>
+
+           <div id="center">
+                <div id="left">
+                    <h3>Sundown is a multi-disciplinary studio focused on creating unique, end-to-end experiences and environments.</h3>
+                </div>
+                <div id="right">
+                    <h1>SPACES <br>
+                        THAT <br>
+                        INSPIRE</h1>
+                </div>
+           </div>
         </div>
     </div>
 
