--- a/Sundown/index.html
+++ b/Sundown/index.html
@@ -29,6 +29,14 @@
                         INSPIRE</h1>
                 </div>
            </div>
+
+           <video  autoplay loop muted src="https://download-video.akamaized.net/v3-1/playback/bdb3a683-9706-4177-8ca4-48dfe2703fac/c72af10b?__token__=st=1704261653~exp=1704276053~acl=%2Fv3-1%2Fplayback%2Fbdb3a683-9706-4177-8ca4-48dfe2703fac%2Fc72af10b%2A~hmac=6bdeca95972a963126e2fa8828c5d2f291f6ffe921f6fc59811f6ebed67b1e5b&r=dXMtd2VzdDE%3D"></video>
+        </div>
+
+        <div id="hero-shape">
+            <div id="hero-1"></div>
+            <div id="hero-2"></div>
+            <div id="hero-3"></div>
         </div>
     </div>
 
