--- a/Sundown/index.html
+++ b/Sundown/index.html
@@ -32,6 +32,12 @@
            </div>
 
            <video  autoplay loop muted src="./video.mp4"></video>
+
+           <div id="hero-shape">
+            <div id="hero-1"></div>
+            <div id="hero-2"></div>
+            <div id="hero-3"></div>
+        </div>
         </div>
 
         <div id="page2">
@@ -61,13 +67,21 @@
                     <div id="gola"></div>
                 </div>
             </div>
+            <div id="page2-bottom">
+                <h1>We are a group of design- <br>driven, goal-focused creators, <br>producers, and designers <br>who believe that the details <br>make all the difference.</h1>
+                <div id="bottom-part2">
+                    <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15d1_Holding_thumb-p-500.jpg" alt="">
+                </div>
+            </div>
+
+            <div id="gooey">
+                
+            </div>
         </div>
 
-        <div id="hero-shape">
-            <div id="hero-1"></div>
-            <div id="hero-2"></div>
-            <div id="hero-3"></div>
-        </div>
+        <div id="page3"></div>
+
+        
     </div>
 
     <!-- Locomotive js -->
@@ -79,6 +93,6 @@
     <!-- Scroll Trigger -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Linking js -->
-    <script src="./script.js"></script>
+    <!-- <script src="./script.js"></script> -->
 </body>
 </html>
