--- a/Sundown/index.html
+++ b/Sundown/index.html
@@ -79,7 +79,36 @@
             </div>
         </div>
 
-        <div id="page3"></div>
+        <div id="page3">
+            <div class="elem">
+                <div class="overlay"></div>
+                <h2>SOHONYC</h2>
+            </div>
+            <div class="elem">
+                <div class="overlay"></div>
+                <h2>Air Force 12021</h2>
+            </div>
+            <div class="elem">
+                <div class="overlay"></div>
+                <h2>Makers Studio HOI</h2>
+            </div>
+            <div class="elem">
+                <div class="overlay"></div>
+                <h2>Play New Kidvision</h2>
+            </div>
+            <div class="elem">
+                <div class="overlay"></div>
+                <h2>SOHO 2023</h2>
+            </div>
+            <div class="elem">
+                <div class="overlay"></div>
+                <h2>NYFW Popup</h2>
+            </div>
+            <div class="elem">
+                <div class="overlay"></div>
+                <h2>50th Anniversary</h2>
+            </div>
+        </div>
 
         
     </div>
@@ -93,6 +122,6 @@
     <!-- Scroll Trigger -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Linking js -->
-    <!-- <script src="./script.js"></script> -->
+    <script src="./script.js"></script>
 </body>
 </html>
