--- a/Sundown/index.html
+++ b/Sundown/index.html
@@ -8,6 +8,9 @@
     <title>Sundown Clone</title>
 </head>
 <body>
+    <div id="fixed-image">
+
+    </div>
     <div id="main">
         <div id="page1">
            <nav>
@@ -80,36 +83,38 @@
         </div>
 
         <div id="page3">
-            <div class="elem">
+           <div id="elem-container">
+            <div class="elem" id="elem1" data-image="https://images.pexels.com/photos/14866387/pexels-photo-14866387.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
                 <div class="overlay"></div>
                 <h2>SOHONYC</h2>
             </div>
-            <div class="elem">
+            <div class="elem" data-image="https://images.pexels.com/photos/18428887/pexels-photo-18428887/free-photo-of-working-woman-bw.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
                 <div class="overlay"></div>
                 <h2>Air Force 12021</h2>
             </div>
-            <div class="elem">
+            <div class="elem" data-image="https://images.pexels.com/photos/18748879/pexels-photo-18748879/free-photo-of-backpacker-in-istnabul-by-bosphorus-strait.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
                 <div class="overlay"></div>
                 <h2>Makers Studio HOI</h2>
             </div>
-            <div class="elem">
+            <div class="elem" data-image="https://images.pexels.com/photos/19171269/pexels-photo-19171269/free-photo-of-woman-in-white-pants-standing-under-a-bridge.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
                 <div class="overlay"></div>
                 <h2>Play New Kidvision</h2>
             </div>
-            <div class="elem">
+            <div class="elem" data-image="https://images.pexels.com/photos/17025383/pexels-photo-17025383/free-photo-of-a-dandelion-parts-of-plants-and-mushrooms-on-a-black-background.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
                 <div class="overlay"></div>
                 <h2>SOHO 2023</h2>
             </div>
-            <div class="elem">
+            <div class="elem" data-image="https://images.pexels.com/photos/11422883/pexels-photo-11422883.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
                 <div class="overlay"></div>
                 <h2>NYFW Popup</h2>
             </div>
-            <div class="elem">
+            <div class="elem" data-image="https://images.pexels.com/photos/18126793/pexels-photo-18126793/free-photo-of-bolhao.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
                 <div class="overlay"></div>
                 <h2>50th Anniversary</h2>
             </div>
         </div>
 
+           </div>
         
     </div>
 
