--- a/Sundown/index.html
+++ b/Sundown/index.html
@@ -83,6 +83,10 @@
         </div>
 
         <div id="page3">
+            <div class="page3-head">
+                <p id="round"></p>
+                <h5>FEATURED PROJECTS</h5>
+            </div>
            <div id="elem-container">
             <div class="elem" id="elem1" data-image="https://images.pexels.com/photos/14866387/pexels-photo-14866387.jpeg?auto=compress&cs=tinysrgb&w=600&lazy=load">
                 <div class="overlay"></div>
@@ -116,8 +120,18 @@
 
            </div>
         
-    </div>
+        <div id="page4">
 
+        </div>
+
+        <div id="page5">
+
+        </div>
+        
+    </div>
+    <div id="footer">
+        <h1>Sundown</h1>
+    </div>
     <!-- Locomotive js -->
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 
