--- a/Sundown/index.html
+++ b/Sundown/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
     <link rel="stylesheet" href="./style.css">
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
     <title>Sundown Clone</title>
 </head>
 <body>
@@ -12,6 +16,15 @@
 
     </div>
     <div id="main">
+        <div id="footer">
+            <div id="footer-div">
+
+            </div>
+            <h1>Sundown</h1>
+            <div id="footer-bottom">
+
+            </div>
+        </div>
         <div id="page1">
            <nav>
             <img src="https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg" alt="">
@@ -129,9 +142,9 @@
         </div>
         
     </div>
-    <div id="footer">
+    <!-- <div id="footer">
         <h1>Sundown</h1>
-    </div>
+    </div> -->
     <!-- Locomotive js -->
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
 
@@ -140,6 +153,8 @@
 
     <!-- Scroll Trigger -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.4/ScrollTrigger.min.js" integrity="sha512-OzC82YiH3UmMMs6Ydd9f2i7mS+UFL5f977iIoJ6oy07AJT+ePds9QOEtqXztSH29Nzua59fYS36knmMcv79GOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Swipperjs CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- Linking js -->
     <script src="./script.js"></script>
 </body>
