--- a/Sundown/index.html
+++ b/Sundown/index.html
@@ -12,6 +12,11 @@
     <title>Sundown Clone</title>
 </head>
 <body>
+    <div id="loader">
+        <h1>ENVIRONMENTS</h1>
+        <h1>EXPERIENCES</h1>
+        <h1>CONTENT</h1>
+    </div>
     <div id="fixed-image">
 
     </div>
