--- a/modernLandingPage/index.html
+++ b/modernLandingPage/index.html
@@ -22,6 +22,38 @@
                         <a href="#">pricing</a>
                     </div>
                 </div>
+                <div id="hero">
+                    <div id="heroleft">
+                        <div class="elem">
+                            <h1>david chang</h1>
+                            <h1>david chang</h1>
+                            <h1>david chang</h1>
+                            <h1>david chang</h1>
+                            <h1>david chang</h1>
+                        </div>
+                        <div class="elem">
+                            <h1>gives zero</h1>
+                            <h1>david chang</h1>
+                            <h1>david chang</h1>
+                            <h1>david chang</h1>
+                            <h1>david chang</h1>
+                        </div>
+                        <div class="elem">
+                            <h1>funks.</h1>
+                            <h1>david chang</h1>
+                            <h1>david chang</h1>
+                            <h1>david chang</h1>
+                            <h1>david chang</h1>
+                        </div>
+                        <button>Explore Now</button>
+                    </div>
+                    <div id="heroright">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                        <div id="imagediv"></div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur aperiam fuga velit magni nesciunt facere! Nulla reprehenderit tenetur labore, omnis molestiae labor</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur aperiam fuga velit magni nesciunt facere! Nulla reprehenderit tenetur labore, omnis molestiae labor</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
