--- a/modernLandingPage/index.html
+++ b/modernLandingPage/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/sheryjs/dist/Shery.css" > 
     <link rel="stylesheet" href="./style.css">
     <title>Modern Landing Page</title>
 </head>
 <body>
     <div id="main">
-        <div id="back"></div>
+        <div id="back">
+            <img src="./images/IMG_7564.JPG" alt="">
+            <img src="./images/IMG_7565.JPG" alt="">
+            <img src="./images/IMG_7566.JPG" alt="">
+            <img src="./images/IMG_7567.JPG" alt="">
+            <img src="./images/IMG_7568.JPG" alt="">
+        </div>
+
+
         <div id="top">
             <div id="workingarea">
                 <div id="nav">
@@ -50,8 +59,9 @@
                     <div id="heroright">
                         <p>Lorem ipsum dolor sit amet.</p>
                         <div id="imagediv"></div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur aperiam fuga velit magni nesciunt facere! Nulla reprehenderit tenetur labore, omnis molestiae labor</p>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur aperiam fuga velit magni nesciunt facere! Nulla reprehenderit tenetur labore, omnis molestiae labor</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur aperiam fuga velit magni nesciunt facere! Nulla reprehenderit </p>
+                        <br>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur aperiam fuga velit magni nesciunt facere! Nulla reprehenderit</p>
                     </div>
                 </div>
             </div>
@@ -60,6 +70,19 @@
 
 
 
+
+    <!--  Gsap is needed for Basic Effects -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+
+    <!-- Scroll Trigger is needed for Scroll Effects -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+
+    <!-- Three.js is needed for 3d Effects -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/0.155.0/three.min.js"></script>
+
+    <!-- ControlKit is needed for Debug Panel -->
+    <script src="https://cdn.jsdelivr.net/gh/automat/controlkit.js@master/bin/controlKit.min.js"></script>
+    <script  type="text/javascript"  src="https://unpkg.com/sheryjs/dist/Shery.js"></script> 
     <script src="./script.js"></script>
 </body>
 </html>
