--- a/bookPortfolio/index.html
+++ b/bookPortfolio/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-    
+    <div class="wrapper">
+        <div class="cover cover-left"></div>
+        <div class="cover cover-left"></div>
+    </div>
     
     <script src="./script.js"></script>
 </body>
