--- a/modernLandingPage/index.html
+++ b/modernLandingPage/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <div id="main">
+        <div id="loader">
+            <h1>Amazing</h1>
+            <h1>Landing</h1>
+            <h1>Page</h1>
+        </div>
         <div id="back">
             <img src="./images/IMG_7564.JPG" alt="">
             <img src="./images/IMG_7565.JPG" alt="">
