--- a/bookPortfolio/index.html
+++ b/bookPortfolio/index.html
@@ -11,7 +11,7 @@
 
     <div class="wrapper">
         <div class="cover cover-left"></div>
-        <div class="cover cover-left"></div>
+        <div class="cover cover-left turn"></div>
     </div>
     
     <script src="./script.js"></script>
