--- a/cubertoClone/index.html
+++ b/cubertoClone/index.html
@@ -32,6 +32,25 @@
                 <p>from scratch</p>
             </div>
         </div>
+
+        <div id="page3">
+            <div>
+                <video muted autoplay loop src="https://cdn.cuberto.com/cb/showreel/1.mp4"></video>
+            </div>
+        </div>
+
+        <div id="page4">
+            <div id="page4-section">
+                <div id="page4-left">
+                    <video muted autoplay loop src="https://cdn.cuberto.com/cb/home/summary/1.mp4?3"></video>
+                </div>
+                <div id="page4-right">
+                    <p>Cuberto is a leading digital product <br> agency focused on branding, UI/UX <br> design, mobile, and web <br> development.</p>
+
+                    <button>How we work</button>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="./script.js"></script>
 </body>
