--- a/scrollingAnimation/index.html
+++ b/scrollingAnimation/index.html
@@ -10,11 +10,13 @@
 <body>
     
         <div id="main">
-            <div id="page1"></div>
-            <div id="page2">
-                <img src="https://images.pexels.com/photos/2249285/pexels-photo-2249285.jpeg?auto=compress&cs=tinysrgb&w=400" alt="">
+            <div id="page1" data-scroll></div>
+            <div id="page2" data-scroll>
+                <img data-scroll data-scroll-speed="10" data-scroll-direction="horizontal"
+                src="https://images.pexels.com/photos/2249285/pexels-photo-2249285.jpeg?auto=compress&cs=tinysrgb&w=400" 
+                alt="">
             </div>
-            <div id="page3"></div>
+            <div id="page3" data-scroll></div>
         </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js">
