--- a/locomotive/index.html
+++ b/locomotive/index.html
@@ -63,10 +63,13 @@
     />
       </div>
       <div id="page5" data-scroll data-scroll-speed="5">
-            <h1 data-scroll data-scroll-speed="5" data-scroll-direction="horizontal"
+            <h1 class="line1" data-scroll data-scroll-speed="5" data-scroll-direction="horizontal"
             >Hello jee kaise hai app</h1>
+            <h1 class="line2" data-scroll data-scroll-speed="5" data-scroll-direction="horizontal"
+            >Hello jee kaise hai app</h1>
+           
       </div>
-      <div id="page6" data-scroll>
+      <div id="page6" data-scroll data-scroll-speed="10">
 
       </div>
     </div>
