--- a/SuperWeb/index.html
+++ b/SuperWeb/index.html
@@ -7,6 +7,18 @@
     <title>Document</title>
   </head>
   <body>
+    <div id="loader">
+      <div id="yellow">
+
+      </div>
+      <video autoplay muted loop src="https://works.studio/uploads/videos/5_version2_200911_024123.mp4"></video>
+      <h1>
+        CREATIVE PROFESSIONAL <br />
+        <em>DEDIDCATED</em> TO CULTURAL <br />
+        ADVANCEMENT THOROUGH <br />
+        <em>STRATEGY</em> AND <em>DESIGN</em>
+      </h1>
+    </div>
     <div id="main">
       <div id="page1">
         <h1>
@@ -19,6 +31,12 @@
       <div id="page2"></div>
       <div id="page3"></div>
     </div>
+
+
+
+
+
+    
     <script src="./script.js"></script>
   </body>
 </html>
